add footer for web

--- a/ui/scss/all.scss
+++ b/ui/scss/all.scss
@@ -20,6 +20,7 @@
 @import 'component/expanding-details';
 @import 'component/file-properties';
 @import 'component/file-render';
+@import 'component/footer';
 @import 'component/form-field';
 @import 'component/header';
 @import 'component/icon';
